[ArtStation content-script] Restored ArtStation support
	It was broken for a long date. Now I support ArtStation again with a much cleaner code!

	That explains my previous commits that upgraded the overall code style of the webextension.

	Automated tests have not been fixed yet.

--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -10,7 +10,7 @@
 	},
 	"content_scripts": [{
 		"matches": ["https://www.artstation.com/*"],
-		"js": ["content-scripts/common.js","content-scripts/artstation.com.js"]
+		"js": ["content-scripts/common.js","fetch.js","content-scripts/artstation.com.js"]
 	},{
 		"matches": ["https://www.furaffinity.net/view/*","https://www.furaffinity.net/full/*"],
 		"js": ["content-scripts/common.js","content-scripts/furaffinity.net.js"]
