[Pixiv test-set] Finished testing
	Now feature in-browser testing, a new test set with now comics and a NSFW rated one.

--- a/webext-adder/tests/meson.build
+++ b/webext-adder/tests/meson.build
@@ -11,6 +11,7 @@ online_tests = files(
 online_nsfw_tests = files(
 	'e621.net-nsfw.json',
 	'furaffinity.net-nsfw.json',
+	'pixiv.net-nsfw.json',
 )
 
 tests_env = environment({
