--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -43,9 +43,11 @@
 		"js": ["content-scripts/common.js","fetch.js","content-scripts/xkcd.com.js"]
 	}],
 	"permissions": [
+		"https://www.deviantart.com/*",
 		"https://twitter.com/*",
 		"https://api.twitter.com/*",
 		"https://mobile.twitter.com/*",
+		"cookies",
 		"dns",
 		"webRequest",
 		"webRequestBlocking",
