[webext-adder] Added support for Referrer-Policy
	Arcollect was a bit leaky about privacy on CDN with the Referrer. Now it behaves like regular user-agents and no longer send the full source as referrer.

	Curl requirements have been bumped to the 7.80 version.

--- a/webext-adder/tests/meson.build
+++ b/webext-adder/tests/meson.build
@@ -138,3 +138,6 @@ nst_json_test_suite = files(
 test_wtf_json_parser_exe = executable('test_wtf_json_parser', 'test_wtf_json_parser.cpp', build_by_default: false)
 test_wtf_json_parser_py = files('test_wtf_json_parser.py')
 test('wtf-json-parser',test_wtf_json_parser_py, args: [test_wtf_json_parser_exe,offline_tests,online_tests,online_nsfw_tests,nst_json_test_suite], protocol: 'tap')
+
+test_referrer_policy_exe = executable('test_referrer_policy', 'test_referrer_policy.cpp', dependencies: webext_adder_dep, build_by_default: false)
+test('test-referrer-policy',test_referrer_policy_exe, env: {'ARCOLLECT_DATA_HOME': meson.current_build_dir()/'test-referrer-policy-data-home'}, protocol: 'tap')
