[Pixiv content-script] Make use of Referrer-Policy
	Pixiv CDN strictly enforce a referrer policy we supported by using hard-coded headers. The improved Referrer management implement the logic to get the same result without toying with headers.
	This commit remove the old workaround and make use of the new Referrer-Policy support.

--- a/meson.build
+++ b/meson.build
@@ -139,7 +139,7 @@ if enable_native_progs
 		endif
 	endif
 	# Query dependencies
-	dep_curl = dependency('libcurl', required: true, default_options: [
+	dep_curl = dependency('libcurl', version: config_h.get('ARCOLLECT_VERREQ_libcurl'), required: true, default_options: [
 		'cmake_module_path='+cmake_module_path
 	])
 	
