[XDG desktop-app] Began support for LowMemoryWarning signal
	Arcollect now listen to D-Bus memory warning from [low-memory-monitor](https://gitlab.freedesktop.org/hadess/low-memory-monitor) and the Portal mirror [org.freedesktop.portal.MemoryMonitor](https://flatpak.github.io/xdg-desktop-portal/#gdbus-org.freedesktop.portal.MemoryMonitor).

	No action beside early D-Bus service quitting is implemented right-now.

--- a/desktop-app/xdg/meson.build
+++ b/desktop-app/xdg/meson.build
@@ -15,6 +15,7 @@ deskapp_srcs += files(
 	'dbus.cpp',
 	'freedesktop-application.cpp',
 	'gnome-shell-search-provider.cpp',
+	'org.freedesktop.LowMemoryMonitor.cpp',
 )
 deskapp_deps += [
 	dep_dbus,
