[WiX packaging] Put defines in a file rather than on command-line
	Might solve nasty bugs later and allow much cleaner dependency management.

--- a/meson.build
+++ b/meson.build
@@ -86,7 +86,7 @@ foreach key: config_h.keys()
 	summary(key,config_h.get(key), section: 'config.h')
 endforeach
 
-configure_file(output: 'config.h', configuration: config_h)
+config_h_file = configure_file(output: 'config.h', configuration: config_h)
 config_h_inc = include_directories('.')
 
 # Dependencies
