--- a/meson_options.txt
+++ b/meson_options.txt
@@ -4,4 +4,5 @@ option('fatal_cpp_feature_miss', type: 'boolean', value: true, description: 'Fai
 option('tests_online', type: 'boolean', value: false, description: 'Enable tests to download data from the internet.')
 option('tests_browser', type: 'boolean', value: false, description: 'Enable in-browser web-extension tests (ignore -Dtest_online).')
 option('tests_nsfw', type: 'boolean', value: false, description: 'Download and display NSFW content in tests. By setting this setting to true, you agree that you can legally see adult oriented content.')
+option('use_system_polib', type: 'boolean', value: false, description: 'Disable download of Python library "polib".')
 option('with_xdg', type: 'feature', value: 'auto', description: 'Integrate with XDG compliant desktops.')
