--- a/subprojects/sdl2/meson.build
+++ b/subprojects/sdl2/meson.build
@@ -15,7 +15,7 @@ subproj_opts.add_cmake_defines({
 	'SDL_LOCALE'       : true,
 	'SDL_POWER'        : false,
 	'SDL_THREADS'      : true,  # Require by some build-systems
-	'SDL_TIMERS'       : true,  # For SDL_GetTicks(). TODO Switch to the C++ standard library
+	'SDL_TIMERS'       : false,
 	'SDL_FILE'         : true,
 	'SDL_LOADSO'       : true,
 	'SDL_CPUINFO'      : false,
