[lcms2 wrap] Tell lcms2 to don't use 'register' C keyword
	It break builds on Clang and is deprecated anyway.

--- a/subprojects/packagefiles/lcms2/meson.build
+++ b/subprojects/packagefiles/lcms2/meson.build
@@ -45,7 +45,13 @@ deps = [
   dependency('threads'),
 ]
 
-cargs = ['-DHasTHREADS=1']
+global_cargs = [
+	'-DCMS_NO_REGISTER_KEYWORD'
+]
+cargs = [
+	global_cargs,
+	'-DHasTHREADS=1',
+]
 
 # Check for threadsafe variants of gmtime
 if cc.has_function('gmtime_r', prefix: '#include <time.h>')
@@ -65,5 +71,6 @@ liblcms2_lib = static_library('lcms2', lcms2_srcs,
 lcms2_dep = declare_dependency(
   link_with : liblcms2_lib,
   version: version,
+  compile_args: global_cargs,
   include_directories : inc_dirs
 )
